# calculator

./: .gitignore  CMakeLists.txt  Calculator.qml  README.md  main.cpp  qml.qrc
src/: CalculatorEngine.cpp  CalculatorEngine.h
